--- a/src/Vista/frmReportesOpPSucursales.form
+++ b/src/Vista/frmReportesOpPSucursales.form
@@ -71,6 +71,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Info..."/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
