--- a/src/Vista/frmSillas.form
+++ b/src/Vista/frmSillas.form
@@ -27,6 +27,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Info.."/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
